resources/css/less/header.less
/* ... */
/* this feature is not fully supported,
   but it's not a crucial one, so that's okay */
.stickable {
    position: sticky;
    top: 55px;
}
@media @mobile {
    .mobile-stickable {
        .stickable;
    }
}
@media @notmobile {
    .desktop-stickable {
        .stickable;
    }
}

.open-nav-search-field {
    border-radius: 5px 0px 0px 5px;
    border-right: none;
    + button {
        border-radius: 0px 5px 5px 0px;
        background-color: #f4f4f4;
    }
}

.nav-toggler-wrapper {
    .android-highlight-fix;
    cursor: pointer;
    display: block;
    position: absolute;
    right: 0px;
    top: 0px;
    width: 50px;
    height: 50px;
    padding-top: 15px;
    text-align: center;
    z-index: 2;
    #nav-toggler {
        position: relative;
        display: inline-block;
        width: 1.25em;
        height: 0.8em;
        border-top: 0.2em solid @delimiter-color;
        font-size: 20px;
        &.active {
            border: none;
            height: 0.6em;
        }
    }
    #nav-toggler:before, #nav-toggler:after {
        content: "";
        position: absolute;
        left: 0px;
        width: 100%;
        border-top: 0.2em solid @delimiter-color;
        transition: transform 0.3s;
    }
    #nav-toggler:before {
        top: 0.2em;
    }
    #nav-toggler:after {
        top: 0.6em;
    }
    #nav-toggler.active:before {
        top: 0.3em;
        transform: rotate(-135deg);
    }
    #nav-toggler.active:after {
        top: 0.3em;
        transform: rotate(135deg);
    }
}

.nav-wrapper-outer {
    @media @mobile {
        transform: translate3d(0, 0, 0); /* ios scroll fix */
    }
}
.nav-wrapper-inner {
    display: table;
    width: 100%;
    max-width: @desktop-max-width;
    margin: 0px auto;
    white-space: nowrap; /* logo part takes up remaining space in nav */
}

// when the user scrolls down, the body gets the class name sticky
// which triggers various changes in the navigation bar
body.sticky {
    @media @notmobile {
        padding-top: @nav-height-sticky + @body-padding-top + 20; /* 20 is an arbitrary number to get more natural transition */

        .fixed-nav-to-top;

        nav > ul > li {
            border-top-color: transparent;
            > a {
                line-height: @nav-height-sticky;
                + ul {
                    top: @nav-height-sticky - 1;
                }
            }
        }
    }
}

@media @mobile {
    .fixed-nav-to-top;
}

